--- a/constrained-optimisation/qs.html
+++ b/constrained-optimisation/qs.html
@@ -36,9 +36,9 @@
                             Optimise the function \(z\) subject to the constraint by:
                         </p>
                         <ol type="a" class="list-alpha mt-2">
-                            <li>Writing down the Langrangian function</li>
-                            <li>Writing down the three first order conditions</li>
-                            <li>Solving the first order condictions to find the optimal \(x\), \(y\), and the value of \(z\)</li>
+                            <li><p class="question-body-text">Writing down the Langrangian function</p></li>
+                            <li><p class="question-body-text">Writing down the three first order conditions</p></li>
+                            <li><p class="question-body-text">Solving the first order condictions to find the optimal \(x\), \(y\), and the value of \(z\)</p></li>
                         </ol>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)"><span>Show Solution</span><i class="fas fa-chevron-right icon"></i></div>
@@ -156,8 +156,8 @@
                             The consumer has an income of 100.  The price of good \(x\) is \(p_x=2\) and the price of good \(y\) is \(p_y=4\).
                         </p>
                         <ol type="a" class="list-alpha mt-2">
-                            <li>Write down the budget constraint for the consumer.</li>
-                            <li>Maximise the customer's utility, subject to their budget constraint.</li>
+                            <li><p class="question-body-text">Write down the budget constraint for the consumer.</p></li>
+                            <li><p class="question-body-text">Maximise the customer's utility, subject to their budget constraint.</p></li>
                         </ol>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)"><span>Show Solution</span><i class="fas fa-chevron-right icon"></i></div>
@@ -199,16 +199,18 @@
                             The cost of labour is 10 and the cost of capital is 20.
                         </p>
                         <ol type="a" class="list-alpha mt-2">
-                            <li>Given a production constraint of an output of 100 units, use the Langrangian method to show that minimum cost occurs when:
+                            <li><p class="question-body-text">Given a production constraint of an output of 100 units, use the Langrangian method to show that minimum cost occurs when:
                                 $$L=\frac{2\alpha K}{\beta}$$
                                 to give:
                                 $$K^*=\left( 100 \left(\frac{2\alpha}{\beta} \right)^{-\alpha} \right)^{\frac{1}{\alpha+\beta}}$$
                                 $$L^*=\left( 100 \left(\frac{2\alpha}{\beta} \right)^{\beta} \right)^{\frac{1}{\alpha+\beta}}$$
+                                </p>
                             </li>
-                            <li>Find the optimal values and the minimum cost when:
+                            <li><p class="question-body-text">Find the optimal values and the minimum cost when:
+                                </p>
                                 <ol type="i" class="list-roman mt-2">
-                                    <li>\(\alpha=\beta=0.5\)</li>
-                                    <li>\(\alpha=0.3\), \(\beta=0.7\)</li>
+                                    <li><p class="question-body-text">\(\alpha=\beta=0.5\)</p></li>
+                                    <li><p class="question-body-text">\(\alpha=0.3\), \(\beta=0.7\)</p></li>
                                 </ol>
                             </li>
                         </ol>
