--- a/returns-to-scale/qs.html
+++ b/returns-to-scale/qs.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marshallian Demand</title>
+    <title>Returns to Scale</title>
     <!-- Font Awesome (for icons in navbar and solution toggles) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Link to your shared stylesheet (relative path from this folder) -->
@@ -20,8 +20,8 @@
     <!-- Navbar Placeholder -->
     <div id="navbar-placeholder"></div>
 
-
-
+<p>This area is being built, but you can you the links at the top to download pdf versions of the questions and the solutions in the meantime.</p>
+<br><br><br><br><br>
     <!-- Footer Section -->
     <footer class="mt-12 text-center text-gray-500 text-sm">
         <p>Icons by <a href="https://fontawesome.com/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800">Font Awesome</a>, licensed under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800">CC BY 4.0</a>.</p>
