--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
                         <p class="text-gray-600 text-sm">Find the optimal choice by weighing the probabilities and outcomes of ventures, using expected value and individual utility functions to maximise satisfaction.</p>
                     </div>
                 </a>
+                <!-- Topic 4: Returns to Scale -->
+                <a href="returns-to-scale/qs.html" class="card">
+                    <i class="fas fa-balance-scale card-icon"></i>
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-800 mb-1">Returns to Scale</h3>
+                        <p class="text-gray-600 text-sm">Find whether a production function results in constant, increasing, or decreasing returns to scale.  Currently only pdf available.</p>
+                    </div>
+                </a>
             </div>
         </section>
 
@@ -131,6 +139,7 @@
 
 </body>
 </html>
+
 
 
 
