--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
                         <p class="text-gray-600 text-sm">Find whether a production function results in constant, increasing, or decreasing returns to scale.  Currently only pdf available.</p>
                     </div>
                 </a>
+                <!-- Topic 5: Production Optimisation -->
+                <a href="production-optimisatin/qs.html" class="card">
+                    <i class="fas fa-industry card-icon"></i>
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-800 mb-1">Returns to Scale</h3>
+                        <p class="text-gray-600 text-sm">Use calculus techniques to find the optimal production levels. Currently only pdf available.</p>
+                    </div>
+                </a>
             </div>
         </section>
 
@@ -139,6 +147,7 @@
 
 </body>
 </html>
+
 
 
 
