--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </a>
                 <!-- Topic 4: Returns to Scale -->
                 <a href="returns-to-scale/qs.html" class="card">
-                    <i class="fas fa-balance-scale card-icon"></i>
+                    <i class="fas fa-chart-line card-icon"></i>
                     <div>
                         <h3 class="text-xl font-semibold text-gray-800 mb-1">Returns to Scale</h3>
                         <p class="text-gray-600 text-sm">Find whether a production function results in constant, increasing, or decreasing returns to scale.  Currently only pdf available.</p>
@@ -147,6 +147,7 @@
 
 </body>
 </html>
+
 
 
 
