--- a/returns-to-scale/qs.html
+++ b/returns-to-scale/qs.html
@@ -20,8 +20,34 @@
     <!-- Navbar Placeholder -->
     <div id="navbar-placeholder"></div>
 
-<p>This area is being built, but you can you the links at the top to download pdf versions of the questions and the solutions in the meantime.</p>
-<br><br><br><br><br>
+    <!-- Main Content Container -->
+    <div class="content-container">
+        <div id="header-placeholder"></div>
+        <section class="mb-12">
+        <p>For each of the following production functions, identify the returns to scale.</p>
+            <ol>
+                
+                <li>
+                    <div class="question-block mb-8">
+                        <p class="question-body-text">$Q(K,L)=3K+2L$</p>
+                        <div class="solution-header" onclick="toggleSolution(this)">
+                                <span>Show Solution</span>
+                                <i class="fas fa-chevron-right icon"></i>
+                            </div>
+                            <div class="solution-content">
+                                <h4 class="text-lg font-semibold mb-2">Solution to 1</h4>
+                                <p>$Q(2K,2L)=6K+4L=2(3K+2L)=2Q(K,L)$ </p>
+                                <p>Doubling input doubles output, so constant returns to scale.</p>
+                                </div>
+                        </div>
+                    </div>
+                </li>
+                </ol>
+        </section>
+    </div>
+
+    
+
     <!-- Footer Section -->
     <footer class="mt-12 text-center text-gray-500 text-sm">
         <p>Icons by <a href="https://fontawesome.com/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800">Font Awesome</a>, licensed under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800">CC BY 4.0</a>.</p>
