--- a/returns-to-scale/qs.html
+++ b/returns-to-scale/qs.html
@@ -42,6 +42,144 @@
                         </div>
                     </div>
                 </li>
+
+                <li>
+                    <div class="question-block mb-8">
+                        <p class="question-body-text">$Q(K,L)=0.2KL$</p>
+                        <div class="solution-header" onclick="toggleSolution(this)">
+                                <span>Show Solution</span>
+                                <i class="fas fa-chevron-right icon"></i>
+                            </div>
+                            <div class="solution-content">
+                                <h4 class="text-lg font-semibold mb-2">Solution to 2</h4>
+                                <p>$Q(2K,2L)=0.2(2K)(2L)=0.2 \times 2 \times 2 KL=0.8KL=4Q(K,L)$ </p>
+                                <p>Doubling input more than doubles output, so increasing returns to scale.</p>
+                                </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="question-block mb-8">
+                        <p class="question-body-text">$Q(K,L)=\frac{KL}{2}$</p>
+                        <div class="solution-header" onclick="toggleSolution(this)">
+                                <span>Show Solution</span>
+                                <i class="fas fa-chevron-right icon"></i>
+                            </div>
+                            <div class="solution-content">
+                                <h4 class="text-lg font-semibold mb-2">Solution to 3</h4>
+                                <p>$Q(2K,2L)=\frac{(2K)(2L)}{2}=2KL=4Q(K,L)$</p>
+                                <p>Doubling input more than doubles output, so increasing returns to scale.</p>
+                                </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="question-block mb-8">
+                        <p class="question-body-text">$Q(K,L)=K^2L^2$</p>
+                        <div class="solution-header" onclick="toggleSolution(this)">
+                                <span>Show Solution</span>
+                                <i class="fas fa-chevron-right icon"></i>
+                            </div>
+                            <div class="solution-content">
+                                <h4 class="text-lg font-semibold mb-2">Solution to 4</h4>
+                                <p>$Q(2K,2L)=(2K)^2(2L)^2=(4K^2)(4L^2)=16K^2L^2=16Q(K,L)$</p>
+                                <p>Doubling input more than doubles output, so increasing returns to scale.</p>
+                                </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="question-block mb-8">
+                        <p class="question-body-text">$Q(K,L)=K^{0.5}L^{0.5}$</p>
+                        <div class="solution-header" onclick="toggleSolution(this)">
+                                <span>Show Solution</span>
+                                <i class="fas fa-chevron-right icon"></i>
+                            </div>
+                            <div class="solution-content">
+                                <h4 class="text-lg font-semibold mb-2">Solution to 5</h4>
+                                <p>$Q(2K,2L)=2^{0.5}K^{0.5}2^{0.5}L^{0.5}=2^{0.5}2^{0.5}K^{0.5}L^{0.5}=2Q(K,L)$ </p>
+                                <p>Doubling input doubles output, so constant returns to scale.</p>
+                                </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="question-block mb-8">
+                        <p class="question-body-text">$Q(K,L)=K^{0.9}L^{0.1}$</p>
+                        <div class="solution-header" onclick="toggleSolution(this)">
+                                <span>Show Solution</span>
+                                <i class="fas fa-chevron-right icon"></i>
+                            </div>
+                            <div class="solution-content">
+                                <h4 class="text-lg font-semibold mb-2">Solution to 6</h4>
+                                <p>$Q(2K,2L)=2^{0.9}K^{0.9}2^{0.1}L^{0.1}=2Q(K,L)$</p>
+                                <p>Doubling input doubles output, so constant returns to scale.</p>
+                                </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="question-block mb-8">
+                        <p class="question-body-text">$Q(K,L)=K^{0.2}L^{0.6}$</p>
+                        <div class="solution-header" onclick="toggleSolution(this)">
+                                <span>Show Solution</span>
+                                <i class="fas fa-chevron-right icon"></i>
+                            </div>
+                            <div class="solution-content">
+                                <h4 class="text-lg font-semibold mb-2">Solution to 7</h4>
+                                <p>$Q(2K,2L)=2^{0.2}K^{0.2}2^{0.6}K^{0.6}=2^{0.8}Q(K,L) \approx 1.74Q(K,L)$ </p>
+                                <p>Doubling input leads to a less than doubling of output, therefore decreasing returns to scale.</p>
+                                </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="question-block mb-8">
+                        <p class="question-body-text">$Q(K,L)=K^{0.8}L^{0.3}$</p>
+                        <div class="solution-header" onclick="toggleSolution(this)">
+                                <span>Show Solution</span>
+                                <i class="fas fa-chevron-right icon"></i>
+                            </div>
+                            <div class="solution-content">
+                                <h4 class="text-lg font-semibold mb-2">Solution to 8</h4>
+                                <p>$Q(2K,2L)=2^{0.8}2^{0.3}K^{0.8}L^{0.3}=2^{1.1}Q(K,L) \approx 2.14Q(K,L)$</p>
+                                <p>Doubling input more than doubles output, so increasing returns to scale.</p>
+                                </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="question-block mb-8">
+                        <p class="question-body-text">$Q(K,L)=K^{\alpha}L^{\beta}$ where</p>
+                        <ol class="list-lower-alpha list-inside pl-4">
+                        <li><p class="question-body-text">$\alpha + \beta=1$</p></li>
+                        <li><p class="question-body-text">$\alpha + \beta<1$</p></li>
+                        <li><p class="question-body-text">$\alpha + \beta>1$</p></li>
+                        </ol>    
+                        <div class="solution-header" onclick="toggleSolution(this)">
+                                <span>Show Solution</span>
+                                <i class="fas fa-chevron-right icon"></i>
+                            </div>
+                            <div class="solution-content">
+                                <h4 class="text-lg font-semibold mb-2">Solution to 9</h4>
+                                <ol class="list-lower-alpha list-inside pl-4">
+                                    
+                                <li><p>$\alpha+\beta=1 \implies Q(2K,2L)=2Q(K,L)$ constant</p></li>
+                                <li><p>$\alpha+\beta<1 \implies 2^{\alpha+\beta}<2 \implies Q(2K,2L)<2Q(K,L)$ decreasing</p></li>
+                                <li><p>$\alpha+\beta>1 \implies 2^{\alpha+\beta}>2 \implies Q(2K,2L)>2Q(K,L)$ increasing</p></li>
+                                </ol>
+                                </div>
+                        </div>
+                    </div>
+                </li>
+                
                 </ol>
         </section>
     </div>
