--- a/returns-to-scale/qs.html
+++ b/returns-to-scale/qs.html
@@ -30,6 +30,7 @@
                 <li>
                     <div class="question-block mb-8">
                         <p class="question-body-text">$Q(K,L)=3K+2L$</p>
+                        <div class="solution-container">
                         <div class="solution-header" onclick="toggleSolution(this)">
                                 <span>Show Solution</span>
                                 <i class="fas fa-chevron-right icon"></i>
@@ -46,6 +47,7 @@
                 <li>
                     <div class="question-block mb-8">
                         <p class="question-body-text">$Q(K,L)=0.2KL$</p>
+                        <div class="solution-container">
                         <div class="solution-header" onclick="toggleSolution(this)">
                                 <span>Show Solution</span>
                                 <i class="fas fa-chevron-right icon"></i>
@@ -62,6 +64,7 @@
                 <li>
                     <div class="question-block mb-8">
                         <p class="question-body-text">$Q(K,L)=\frac{KL}{2}$</p>
+                        <div class="solution-container">
                         <div class="solution-header" onclick="toggleSolution(this)">
                                 <span>Show Solution</span>
                                 <i class="fas fa-chevron-right icon"></i>
@@ -78,6 +81,7 @@
                 <li>
                     <div class="question-block mb-8">
                         <p class="question-body-text">$Q(K,L)=K^2L^2$</p>
+                        <div class="solution-container">
                         <div class="solution-header" onclick="toggleSolution(this)">
                                 <span>Show Solution</span>
                                 <i class="fas fa-chevron-right icon"></i>
@@ -94,6 +98,7 @@
                 <li>
                     <div class="question-block mb-8">
                         <p class="question-body-text">$Q(K,L)=K^{0.5}L^{0.5}$</p>
+                        <div class="solution-container">
                         <div class="solution-header" onclick="toggleSolution(this)">
                                 <span>Show Solution</span>
                                 <i class="fas fa-chevron-right icon"></i>
@@ -110,6 +115,7 @@
                 <li>
                     <div class="question-block mb-8">
                         <p class="question-body-text">$Q(K,L)=K^{0.9}L^{0.1}$</p>
+                        <div class="solution-container">
                         <div class="solution-header" onclick="toggleSolution(this)">
                                 <span>Show Solution</span>
                                 <i class="fas fa-chevron-right icon"></i>
@@ -126,6 +132,7 @@
                 <li>
                     <div class="question-block mb-8">
                         <p class="question-body-text">$Q(K,L)=K^{0.2}L^{0.6}$</p>
+                        <div class="solution-container">
                         <div class="solution-header" onclick="toggleSolution(this)">
                                 <span>Show Solution</span>
                                 <i class="fas fa-chevron-right icon"></i>
@@ -142,6 +149,7 @@
                 <li>
                     <div class="question-block mb-8">
                         <p class="question-body-text">$Q(K,L)=K^{0.8}L^{0.3}$</p>
+                        <div class="solution-container">
                         <div class="solution-header" onclick="toggleSolution(this)">
                                 <span>Show Solution</span>
                                 <i class="fas fa-chevron-right icon"></i>
@@ -163,6 +171,7 @@
                         <li><p class="question-body-text">$\alpha + \beta<1$</p></li>
                         <li><p class="question-body-text">$\alpha + \beta>1$</p></li>
                         </ol>    
+                        <div class="solution-container">
                         <div class="solution-header" onclick="toggleSolution(this)">
                                 <span>Show Solution</span>
                                 <i class="fas fa-chevron-right icon"></i>
