--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <a href="production-optimisation/qs.html" class="card">
                     <i class="fas fa-industry card-icon"></i>
                     <div>
-                        <h3 class="text-xl font-semibold text-gray-800 mb-1">Returns to Scale</h3>
+                        <h3 class="text-xl font-semibold text-gray-800 mb-1">Production Optimisation</h3>
                         <p class="text-gray-600 text-sm">Use calculus techniques to find the optimal production levels. Currently only pdf available.</p>
                     </div>
                 </a>
@@ -147,6 +147,7 @@
 
 </body>
 </html>
+
 
 
 
