--- a/index.html
+++ b/index.html
@@ -135,6 +135,14 @@
                         <p class="text-gray-600 text-sm">Use calculus techniques to find the optimal production levels. Currently only pdf available.</p>
                     </div>
                 </a>
+                 <!-- Topic 6: Monopoly Profit -->
+                <a href="monopoly-profit/qs.html" class="card">
+                    <i class="fas fa-dollar-sign card-icon"></i>
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-800 mb-1">Monopoly Profit and Maximum Profit</h3>
+                        <p class="text-gray-600 text-sm">Finding profits of monopolies and using calculus techniques to find maximum profits.  Also looks at price discrimination.</p>
+                    </div>
+                </a>
             </div>
         </section>
 
@@ -147,6 +155,7 @@
 
 </body>
 </html>
+
 
 
 
