--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <i class="fas fa-times card-icon"></i>
                     <div>
                         <h3 class="text-xl font-semibold text-gray-800 mb-1">Differentiation Product Rule</h3>
-                        <p class="text-gray-600 text-sm">Understand how to differentiate functions that are products of two or more terms using the product rule.</p>
+                        <p class="text-gray-600 text-sm">Understand how to differentiate functions that are products of two or more terms using the product rule. Also looks at the quotient rule.</p>
                     </div>
                 </a>
                 <!-- Skill 5: One Variable Optimisation -->
@@ -124,7 +124,7 @@
                     <i class="fas fa-chart-line card-icon"></i>
                     <div>
                         <h3 class="text-xl font-semibold text-gray-800 mb-1">Returns to Scale</h3>
-                        <p class="text-gray-600 text-sm">Find whether a production function results in constant, increasing, or decreasing returns to scale.  Currently only pdf available.</p>
+                        <p class="text-gray-600 text-sm">Find whether a production function results in constant, increasing, or decreasing returns to scale.</p>
                     </div>
                 </a>
                 <!-- Topic 5: Production Optimisation -->
@@ -132,7 +132,7 @@
                     <i class="fas fa-industry card-icon"></i>
                     <div>
                         <h3 class="text-xl font-semibold text-gray-800 mb-1">Production Optimisation</h3>
-                        <p class="text-gray-600 text-sm">Use calculus techniques to find the optimal production levels. Currently only pdf available.</p>
+                        <p class="text-gray-600 text-sm">Use calculus techniques to find the optimal production levels.</p>
                     </div>
                 </a>
                  <!-- Topic 6: Monopoly Profit -->
@@ -140,7 +140,7 @@
                     <i class="fas fa-dollar-sign card-icon"></i>
                     <div>
                         <h3 class="text-xl font-semibold text-gray-800 mb-1">Monopoly Profit and Maximum Profit</h3>
-                        <p class="text-gray-600 text-sm">Finding profits of monopolies and using calculus techniques to find maximum profits.  Also looks at price discrimination.</p>
+                        <p class="text-gray-600 text-sm">Finding profits of monopolies and using calculus techniques to find maximum profits.  Also looks at price discrimination. Currently only pdf available.</p>
                     </div>
                 </a>
             </div>
@@ -155,6 +155,7 @@
 
 </body>
 </html>
+
 
 
 
